# bytestream

./: .gitignore  CMakeLists.txt
cmake/: fetch_bytestream.cmake  fetch_max_sdk_base.cmake  fetch_maxutils.cmake  fetch_sadamlib-sdk.cmake  fetch_zpp_bits.cmake
docs/: bs.tobytes.maxref.xml
include/: atom_views.hpp  from_bytes.hpp  midibitpack.hpp  optional_patch.hpp  type_info.hpp
include/bytestream/: COBS.hpp  SLIP.hpp
src/bs.decodeframe/: CMakeLists.txt  bs.decodeframe.cpp
src/bs.encodeframe/: CMakeLists.txt  bs.encodeframe.cpp
src/bs.frombytes/: CMakeLists.txt  bs.frombytes.cpp
src/bs.hash/: CMakeLists.txt  bs.hash.cpp  openssl.cmake  sha.hpp
src/bs.midibitpack/: CMakeLists.txt  bs.midibitpack.cpp
src/bs.serial/: CMakeLists.txt  bs.serial.cpp  serial_context.cpp  serial_context.hpp  serial_port.hpp  serial_reader.hpp
src/bs.tobytes/: CMakeLists.txt  bs.tobytes.cpp
src/serialisation/: CMakeLists.txt  concepts.hpp  storage.cpp  storage.hpp  type_info.cpp  type_info.hpp
test/: CMakeLists.txt  test_cobs.cpp  test_data_helpers.hpp  test_parse_typeinfo.cpp  test_serial.cpp  test_slip.cpp
